--- a/style.css
+++ b/style.css
@@ -472,3 +472,70 @@ main {
         width: 80%;
     }
 }
+
+
+.slides{
+    width: 100%;
+    position: relative;
+    }
+    .slides .slide{
+    display: none;
+    }
+    .slides .slide img{
+    width: 60%;
+    height: 20%;
+    margin-left: 20%;
+    animation-name: fade;
+    animation-duration: 1.5s;
+    }
+    .slides .navigation{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    }
+    .slides .navigation .prev, .slides .navigation .next{
+    cursor: pointer;
+    padding: 16px;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    background: rgba(0,0,0,0.2);
+    user-select: none;
+    transition: 0.6s ease;
+    }
+    .slides .navigation .prev:hover, .slides .navigation .next:hover{
+    background: rgba(0,0,0,1);
+    }
+    @keyframes fade {
+    from{opacity: 0.3}
+    to {opacity: 1}
+    }
+    @media (max-width: 992px){
+    .slides .navigation .prev, .slides .navigation .next{
+    font-size: 18px;
+    padding: 13px;
+    }
+    }
+    @media (max-width: 768px){
+    .slides .navigation .prev, .slides .navigation .next{
+    font-size: 15px;
+    padding: 10px;
+    }
+    }
+    @media (max-width: 576px){
+    .slides .navigation .prev, .slides .navigation .next{
+    font-size: 12px;
+    padding: 7px;
+    }
+    }
+    @media (max-width: 360px){
+    .slides .navigation .prev, .slides .navigation .next{
+    font-size: 11px;
+    padding: 6px;
+    }
+    }
+    
